Table overflow scroll on mobile only, img style fixed

--- a/main.css
+++ b/main.css
@@ -4,14 +4,7 @@
 @import url('//fonts.googleapis.com/css?family=Rock+Salt');
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
 @import url('//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/github.min.css');
-.title-logo {
-    display: block;
-    text-align: center;
-    margin: 0 auto;
-    padding-bottom: 1em;
-    width: 100%;
-    max-width: 36em;
-}
+
 body {
     margin: 0;
     padding: 0;
@@ -96,6 +89,15 @@ img.detail {
     height: 1.5em;
     margin: 0.5em;
 }
+img.title-logo {
+    float: none;
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 1em;
+    width: 100%;
+    max-width: 36em;
+}
 .icon-set * {
     float: left;
 }
@@ -106,9 +108,6 @@ table {
     border: 0.2em solid black;
     border-collapse: collapse;
     margin: 0.6em auto;
-}
-.table-wrapper {
-    overflow-x: scroll;
 }
 td, th {
     border: 0.2em solid black;
@@ -358,6 +357,9 @@ code.lang-html::before {
     }
     table {
         font-size: 2.5em;
+    }
+    .table-wrapper {
+        overflow-x: scroll;
     }
     blockquote {
         margin-bottom: 4em;
